[gd_scene load_steps=8 format=3 uid="uid://ddh2fuxyvnktp"]

[ext_resource type="Script" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorTextNode.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://c0pw3rdictm2v" path="res://addons/hyh.cutscene_graph/editor/nodes/EditorGraphNodeBase.tscn" id="2"]
[ext_resource type="StyleBox" uid="uid://ctwtf715dqq7e" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/dialogue_node.tres" id="2_47ux3"]
[ext_resource type="StyleBox" uid="uid://boibm7ylgjwcg" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/dialogue_node_selected.tres" id="3_abjfv"]
[ext_resource type="StyleBox" uid="uid://bcn0xekidb13s" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/position_overlay.tres" id="5_utegb"]
[ext_resource type="StyleBox" uid="uid://q13kdbxbc8nb" path="res://addons/hyh.cutscene_graph/editor/nodes/styles/control_style_invisible.tres" id="6_8h01g"]

[sub_resource type="FontVariation" id="FontVariation_1mejt"]
variation_embolden = 0.3

[node name="EditorTextNode" instance=ExtResource("2")]
offset_right = 545.0
offset_bottom = 342.0
theme_override_colors/title_color = Color(0, 0, 0, 1)
theme_override_colors/close_color = Color(0, 0, 0, 1)
theme_override_colors/resizer_color = Color(0, 0, 0, 1)
theme_override_styles/frame = ExtResource("2_47ux3")
theme_override_styles/selected_frame = ExtResource("3_abjfv")
theme_override_styles/position = ExtResource("5_utegb")
title = ""
resizable = true
slot/0/left_enabled = false
slot/0/left_type = 0
slot/0/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/left_icon = null
slot/0/right_enabled = false
slot/0/right_type = 0
slot/0/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/0/right_icon = null
slot/0/draw_stylebox = true
slot/1/left_enabled = true
slot/1/left_type = 0
slot/1/left_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/left_icon = null
slot/1/right_enabled = true
slot/1/right_type = 0
slot/1/right_color = Color(0.94902, 0.94902, 0.94902, 0.882353)
slot/1/right_icon = null
slot/1/draw_stylebox = true
script = ExtResource("1")

[node name="DialogueTypeParent" type="Control" parent="." index="0"]
layout_mode = 2

[node name="DialogueTypeOption" type="OptionButton" parent="DialogueTypeParent" index="0"]
layout_mode = 1
offset_left = -5.0
offset_top = -26.0
offset_right = 93.0
offset_bottom = -3.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("FontVariation_1mejt")
theme_override_styles/focus = ExtResource("6_8h01g")
theme_override_styles/normal = ExtResource("6_8h01g")
theme_override_styles/hover = ExtResource("6_8h01g")
theme_override_styles/pressed = ExtResource("6_8h01g")
flat = true
item_count = 3
selected = 0
fit_to_longest_item = false
popup/item_0/text = "Dialogue"
popup/item_0/id = 0
popup/item_1/text = "Narration"
popup/item_1/id = 1
popup/item_2/text = "A Really Long Type For Example Purposes"
popup/item_2/id = 2

[node name="RootContainer" type="MarginContainer" parent="." index="1"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VerticalLayout" type="VBoxContainer" parent="RootContainer" index="0"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 10

[node name="CharacterOptionsContainer" type="GridContainer" parent="RootContainer/VerticalLayout" index="0"]
layout_mode = 2
theme_override_constants/h_separation = 25
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="0"]
layout_mode = 2
text = "Character:"

[node name="CharacterSelect" type="OptionButton" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="Label2" type="Label" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="2"]
layout_mode = 2
text = "Variant:"

[node name="VariantSelect" type="OptionButton" parent="RootContainer/VerticalLayout/CharacterOptionsContainer" index="3"]
layout_mode = 2
size_flags_horizontal = 3
toggle_mode = false

[node name="TextEdit" type="TextEdit" parent="RootContainer/VerticalLayout" index="1"]
custom_minimum_size = Vector2(0, 31)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_default_cursor_shape = 0
theme_override_constants/line_spacing = 8
wrap_mode = 1

[node name="TranslationContainer" type="GridContainer" parent="RootContainer/VerticalLayout" index="2"]
layout_mode = 2
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="RootContainer/VerticalLayout/TranslationContainer" index="0"]
layout_mode = 2
text = "Translation Key:"

[node name="TranslationKeyEdit" type="LineEdit" parent="RootContainer/VerticalLayout/TranslationContainer" index="1"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="resize_request" from="." to="." method="_on_resize_request"]
[connection signal="item_selected" from="DialogueTypeParent/DialogueTypeOption" to="." method="_on_dialogue_type_option_item_selected"]
[connection signal="item_selected" from="RootContainer/VerticalLayout/CharacterOptionsContainer/CharacterSelect" to="." method="_on_CharacterSelect_item_selected"]
[connection signal="item_selected" from="RootContainer/VerticalLayout/CharacterOptionsContainer/VariantSelect" to="." method="_on_VariantSelect_item_selected"]
[connection signal="text_changed" from="RootContainer/VerticalLayout/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="text_changed" from="RootContainer/VerticalLayout/TranslationContainer/TranslationKeyEdit" to="." method="_on_translation_key_edit_text_changed"]
